- Removed fetch on TaggedUserProfile and LocationUserProfile, causing issues - Made the booking button smaller on eventboxes

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2464,9 +2464,14 @@ h3.aside-title {
   text-align: right;
   float:right;
 }
+.panel-startpage .booking-btn-wrapper {
+  position: relative;
+  display: inline-block;
+  margin-top:20px;
+}
 .panel-startpage .btn-booking {
-  margin-top:10px;
-  margin-bottom:0px;
+  margin-top:0;
+  margin-bottom:0;
 }
 .panel-startpage .price-info
 {
